k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/managed: 'false'
    cert-manager.io/cluster-issuer: zerossl-production
  labels:
    app.kubernetes.io/instance: personal-di-works
    env: prd
    org: personal-di-works
    stage: prod
  name: personal-di-works
spec:
  ingressClassName: nginx
  rules:
  - host: di.works
    http:
      paths:
      - backend:
          service:
            name: personal-di-works
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: personal-di-works-mailer
            port:
              number: 8000
        path: /email
        pathType: Prefix
  tls:
  - hosts:
    - di.works
    secretName: personal-di-works-tls
